tests/ui/traits/next-solver/overflow/exponential-trait-goals.stderr
error[E0275]: overflow evaluating the requirement `W<_>: Trait`
  --> $DIR/exponential-trait-goals.rs:17:13
   |
LL |     impls::<W<_>>();
   |             ^^^^
   |
note: required by a bound in `impls`
  --> $DIR/exponential-trait-goals.rs:14:13
   |
LL | fn impls<T: Trait>() {}
   |             ^^^^^ required by this bound in `impls`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
